--- a/public/index.html
+++ b/public/index.html
@@ -41,3 +41,5 @@
     -->
   </body>
 </html>
+
+<!-- <a target="_blank" href="https://icons8.com/icon/66036/earbud-headphones">Earbud Headphones</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
